Fix profiles with bad |use_date| values.

A recent CL set the use date of new profiles to Now(). However, profiles that were created before and have not been used since still have the default value.

Adds a routine to set the use date of profiles for which it is set to the default value to two weeks before Now(). That routine will be run once per major version.

BUG=619587
TEST=PersonalDataManagerTest

Review-Url: https://codereview.chromium.org/2077003002
Cr-Commit-Position: refs/heads/master@{#400526}

Former-commit-id: e9ba60d7808bcdc37d8e6c69d036841a683b9e3e