components/autofill/core/common/autofill_pref_names.cc
@@ -10,6 +10,10 @@ namespace prefs {
 // Boolean that is true if Autofill is enabled and allowed to save profile data.
 const char kAutofillEnabled[] = "autofill.enabled";
 
+// Boolean that is true if Autofill address profiles were fixed regarding their
+// bad use dates.
+const char kAutofillProfileUseDatesFixed[] = "autofill.profile_use_dates_fixed";
+
 // Boolean that's true when Wallet card and address import is enabled by the
 // user.
 const char kAutofillWalletImportEnabled[] = "autofill.wallet_import_enabled";
