components/autofill/core/common/autofill_pref_names.h
@@ -12,6 +12,7 @@ namespace prefs {
 // component. Keep alphabetized, and document each in the .cc file.
 
 extern const char kAutofillEnabled[];
+extern const char kAutofillProfileUseDatesFixed[];
 extern const char kAutofillWalletImportEnabled[];
 extern const char kAutofillWalletImportStorageCheckboxState[];
 
